database connected and  appearence models and routes

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-GOOGLE_CLIENT_SECRET="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"
-GOOGLE_CLIENT_ID="1026637016097-g86bm2scrchfdqme8qnt0o7p51ink7ju.apps.googleusercontent.com"
+MANGO_URI=mongodb+srv://next-auth:MBj3iQZI678GgKZf@cluster0.6m3zpaw.mongodb.net/auth
+NEXTAUTH_SECRET=dfsasfjjuas
+JWT_SECRET=gsdadffe
 
-MONGO_URI="mongodb+srv://test:test123123@cluster0.pgjpuuf.mongodb.net/test"
+GOOGLE_CLIENT_ID=1095256118448-i5un1hrhsb6pk6kt91gtv36jiuq05grn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
