complete appereance page backend

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MANGO_URI=mongodb+srv://next-auth:MBj3iQZI678GgKZf@cluster0.6m3zpaw.mongodb.net/auth
+MONGODB_URI=mongodb+srv://next-auth:MBj3iQZI678GgKZf@cluster0.6m3zpaw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MANGO_URI=mongodb+srv://next-auth:MBj3iQZI678GgKZf@cluster0.6m3zpaw.mongodb.net/retryWrites=true&w=majority&appName=Cluster0
 NEXTAUTH_SECRET=dfsasfjjuas
 JWT_SECRET=gsdadffe
 
