--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jotai": "^2.8.3",
+    "link-preview-js": "^3.0.5",
     "lucide-react": "^0.383.0",
     "micro": "^10.0.1",
     "mongodb": "^6.7.0",
@@ -51,6 +52,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-player": "^2.16.0",
     "stripe": "^15.11.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
