--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
