--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "vercel": "^34.2.7",
     "zod": "^3.23.8"
   },
